--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:wght@300;400;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
+:root
+{
     --accent:#c15c26;
     --blue: #003555;
     --dark-blue: #012b45;
@@ -30,7 +31,8 @@
     transition: width none;
 }
 
-html{
+html
+{
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
